# diploma2.0

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  convert_images.py  requests.md  serve.py  tyrol-w34.tif  vizualize_geohash.html  vizualize_getting.html  vizualize_loading.html
client/: Makefile  client.py  client_server.py  client_web.py  conftest.py  encrypt_config.py  index.html  metadata_extractor.py  requirements.txt  run_tests.sh  server_config.json  server_config.py  server_key.key  test_client.py
min_router/: CMakeLists.txt  Dockerfile  README.md  db_manager.cpp  db_manager.h  docker-compose.yml  init.sql  main.cpp  model_inference.cpp  model_inference.h  sentinel_processor.cpp  sentinel_processor.h
routing_server/: Makefile  README.md  bd.sql  db_creator.sh  db_manager.cpp  db_manager.h  gossip.cpp  handling_requests.cpp  routing_server.cpp  routing_server.h
routing_server/unet_module/: CMakeLists.txt  best_unet_resnet34.pth  test_unet.cpp  unet_module.cpp  unet_module.h
segm_model/: export_to_torchscript.py  predicting.py  training.py
server/: tiles.cpp
storage_server/: Makefile  README.md  create_tiles.sql  db_creator.sh  db_manager.cpp  db_manager.h  storage_server.cpp  storage_server.h
web-server/: README.md  httpparser.cpp  httpparser.h  test_script.sh
web_server/: CMakeCache.txt  Makefile  cmake_install.cmake  final  optparse.cpp  optparse.h  server.py  webserver.cpp  webserver.h
